@@ -1,6 +1,10 @@
+2019-12-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/date.cpp: A few more #nocov tage
+
 2019-12-13  Dirk Eddelbuettel  <edd@debian.org>
 
-	* src/api.cpp: A few more nocov tags
+	* src/api.cpp: A few more #nocov tags
 	* src/attributes.cpp: Idem
 	* src/barrier.cpp: Idem
 
